renamed:    cedric_ndop.html -> Cedric/cedric_ndop.html 	renamed:    player-photo.jpg -> Cedric/player-photo.jpg

--- a/Cedric/cedric_ndop.html
+++ b/Cedric/cedric_ndop.html
@@ -366,10 +366,10 @@
   <!-- ============ TOP HEADER ============ -->
   <div class="header-bar">
     <!-- REPLACE: team logo (use a local file path or URL) -->
-    <img src="logo.png" alt="Team Logo" class="logo"
+    <img src="../logo.png" alt="Team Logo" class="logo"
          onerror="this.style.display='none'">
     <div class="motto">INTÉGRITÉ &nbsp;&bull;&nbsp; DISCIPLINE &nbsp;&bull;&nbsp; EXCELLENCE</div>
-    <img src="logo.png" alt="Team Logo" class="logo"
+    <img src="../logo.png" alt="Team Logo" class="logo"
          onerror="this.style.display='none'">
   </div>
 
@@ -519,7 +519,7 @@
 
   <!-- ============ FOOTER ============ -->
   <div class="footer-bar">
-    <img src="logo-foot.png" alt="Logo" class="logo-sm"
+    <img src="../logo-foot.png" alt="Logo" class="logo-sm"
          onerror="this.style.display='none'">
     <div class="motto-sm">INTÉGRITÉ &nbsp;&bull;&nbsp; DISCIPLINE &nbsp;&bull;&nbsp; EXCELLENCE</div>
   </div>
