modified:   Cedric/cedric_ndop.html

--- a/Cedric/cedric_ndop.html
+++ b/Cedric/cedric_ndop.html
@@ -367,11 +367,13 @@
   <div class="header-bar">
     <!-- REPLACE: team logo (use a local file path or URL) -->
     <img src="../logo.png" alt="Team Logo" class="logo"
-         onerror="this.style.display='none'">
+       style="width:80px; height:80px; object-fit:contain;"
+       onerror="this.style.display='none'">
     <div class="motto">INTÉGRITÉ &nbsp;&bull;&nbsp; DISCIPLINE &nbsp;&bull;&nbsp; EXCELLENCE</div>
     <img src="../logo.png" alt="Team Logo" class="logo"
-         onerror="this.style.display='none'">
-  </div>
+       style="width:80px; height:80px; object-fit:contain;"
+       onerror="this.style.display='none'">
+    </div>
 
   <div class="main-content">
 
@@ -404,7 +406,7 @@
         </div>
         <div class="info-row">
           <span class="info-label">Nationalité</span>
-          <span class="info-value">Camerounaise</span>               <!-- REPLACE -->
+          <span class="info-value">Cameroun</span>               <!-- REPLACE -->
         </div>
         <div class="info-row">
           <span class="info-label">Citoyenneté CA</span>
@@ -478,8 +480,8 @@
 
       <div class="stats-extra">
         <div class="stat-box-sm">
-          <div class="stat-value">20%</div>                      <!-- REPLACE -->
-          <div class="stat-label">3PT%</div>
+          <div class="stat-value">20.2</div>                      <!-- REPLACE -->
+          <div class="stat-label">EFF</div>
         </div>
         <div class="stat-box-sm">
           <div class="stat-value">60%</div>                      <!-- REPLACE -->
@@ -509,8 +511,9 @@
 
       <!-- HIGHLIGHTS -->
       <div class="section-title">Highlights</div>
-      <a href="https://youtu.be/XrzvwPRQyV8?si=lViKGLypjJnXSylG"
-         target="_blank" class="highlights-link">
+      <a href="https://www.youtube.com/watch?v=jTQfF0KSeJs"
+         target="_blank" class="highlights-link"
+         style="padding:16px 20px;">
         Voir les Highlights / Watch Highlights
       </a>                                                        <!-- REPLACE href -->
 
@@ -520,6 +523,7 @@
   <!-- ============ FOOTER ============ -->
   <div class="footer-bar">
     <img src="../logo-foot.png" alt="Logo" class="logo-sm"
+    style="width:50px; height:50px; object-fit:contain;"
          onerror="this.style.display='none'">
     <div class="motto-sm">INTÉGRITÉ &nbsp;&bull;&nbsp; DISCIPLINE &nbsp;&bull;&nbsp; EXCELLENCE</div>
   </div>
